# easyapp

./: .gitignore  .style.yapf  CHANGELOG.md  README.md  example.py  setup.cfg  test.bat
src/easyapp/: __init__.py  arguments.py  config.py  exceptions.py  log.py
src/easyapp/network/: socket.py
src/easyapp/utils/: __init__.py  path.py
test/: calculator.py  factorial.py  test.bat  test.py
test/config/: config.yml  results.yml
test/config/easyapp/: arguments.yml  info.yml  logging.yml
