[metadata]
name                          = easyapp-gliptal
version                       = 0.0.0
author                        = Mattia Affabris
author_email                  = affa@outlook.it
description                   = Quickly author Python3 applications.
long_description              = file: README.md
long_description_content_type = text/markdown
url                           = https://github.com/Gliptal/easyapp
project_urls                  =
    Readme                    = https://github.com/Gliptal/easyapp/blob/master/README.md
    Changelog                 = https://github.com/Gliptal/easyapp/blob/master/CHANGELOG.md
classifiers                   =
    Programming Language :: Python :: 3.9
    Operating System :: Microsoft :: Windows
    Natural Language :: English
    Development Status :: 3 - Alpha

[options]
package_dir      =
    = src
packages         = find:
python_requires  = >=3.9
install_requires =
    confuse
    ruamel.yaml

[options.packages.find]
where = src
